--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "client:dev": "react-scripts start",
     "client:build": "react-scripts build",
     "server:dev": "nodemon index.js",
+    "seed": "node ./db/seed.js",
     "db:build": "node ./db/init_db",
     "start": "node index.js"
   },
